<resources>
    <string name="app_name">Kotlin Architecture Components</string>
    <string name="welcome_to_quick_chat">Welcome to QuickChat!</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logo">QuickChat</string>
    <string name="register_info">If you don\'t have an account, click the button bellow</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="remember_my_username">Remember my username</string>
    <string name="keep_me_logged">Keep me logged</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="set_status">Set status:</string>
    <string name="submit_changes">Submit changes</string>
    <string name="nickname">nickname</string>
    <string name="picture">picture</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="enter_username_or_nickname_of_the_contact">Enter username or nickname of the contact.</string>
    <string name="enter_message">Enter message:</string>
    <string name="send">Send</string>
</resources>
